--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "date-fns": "^2.0.0-beta.5",
+    "firebase": "^7.14.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-calendar": "^3.0.1",
