--- a/package.json
+++ b/package.json
@@ -41,5 +41,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sabbasachiPH/doctor-portal-sab.git"
+  },
+  "keywords": [
+    "sabbasachi"
+  ],
+  "author": "sabbasachi saha",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sabbasachiPH/doctor-portal-sab/issues"
+  },
+  "homepage": "https://github.com/sabbasachiPH/doctor-portal-sab#readme"
 }
